--- a/UnionTypes/UnionTypes.csproj
+++ b/UnionTypes/UnionTypes.csproj
@@ -4,7 +4,7 @@
         <TargetFramework>netstandard2.0</TargetFramework>
         <LangVersion>latest</LangVersion>
         <Nullable>enable</Nullable>
-        <Version>1.0.0</Version>
+        <Version>1.0.1</Version>
         <Authors>Ben Hutchison</Authors>
         <Copyright>© 2024 $(Authors)</Copyright>
         <Company>$(Authors)</Company>
@@ -14,7 +14,7 @@
         <PublishRepositoryUrl>true</PublishRepositoryUrl>
         <RepositoryType>git</RepositoryType>
         <PackageLicenseExpression>Apache-2.0</PackageLicenseExpression>
-        <Description>Union types in C# implemented with implicit casts</Description>
+        <Description>Union types implemented in C# using implicit casts</Description>
         <PackageTags>union types</PackageTags>
         <!-- <PackageIcon>icon.jpg</PackageIcon> -->
         <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
