--- a/UnionTypes/UnionTypes.csproj
+++ b/UnionTypes/UnionTypes.csproj
@@ -4,7 +4,7 @@
         <TargetFrameworks>netstandard2.0;net452</TargetFrameworks>
         <LangVersion>latest</LangVersion>
         <Nullable>enable</Nullable>
-        <Version>1.0.1</Version>
+        <Version>1.1.0</Version>
         <Authors>Ben Hutchison</Authors>
         <Copyright>© 2024 $(Authors)</Copyright>
         <Company>$(Authors)</Company>
@@ -28,6 +28,9 @@
 
     <ItemGroup>
         <PackageReference Include="Microsoft.SourceLink.GitHub" Version="8.0.0" PrivateAssets="All" />
+    </ItemGroup>
+
+    <ItemGroup>
         <!-- <None Include="icon.jpg" Pack="true" PackagePath="\" /> -->
         <None Include="..\Readme.md" Pack="true" PackagePath="\" />
     </ItemGroup>
