--- a/UnionTypes/UnionTypes.csproj
+++ b/UnionTypes/UnionTypes.csproj
@@ -1,12 +1,12 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
         <TargetFrameworks>netstandard2.0;net452</TargetFrameworks>
         <LangVersion>latest</LangVersion>
         <Nullable>enable</Nullable>
-        <Version>1.1.0</Version>
+        <Version>1.2.0</Version>
         <Authors>Ben Hutchison</Authors>
-        <Copyright>© 2024 $(Authors)</Copyright>
+        <Copyright>© 2025 $(Authors)</Copyright>
         <Company>$(Authors)</Company>
         <NoWarn>1701;1702;CS8524;CS8509;IDE0079</NoWarn>
         <PackageProjectUrl>https://github.com/Aldaviva/UnionTypes</PackageProjectUrl>
